[gd_scene load_steps=4 format=3 uid="uid://k4hn1nvi260u"]

[ext_resource type="Script" uid="uid://ms5fspo47b07" path="res://scripts/test_scene_cards.gd" id="1_jkwmv"]
[ext_resource type="PackedScene" uid="uid://be56j1nosua6h" path="res://scenes/objects/cards/base_card.tscn" id="2_frvsy"]
[ext_resource type="Resource" uid="uid://bxoon4pxmbovi" path="res://scenes/objects/items/new_resource.tres" id="2_gfk8t"]

[node name="TestSceneCards" type="Node2D"]
script = ExtResource("1_jkwmv")
item = ExtResource("2_gfk8t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BaseCard" parent="CanvasLayer" instance=ExtResource("2_frvsy")]
position = Vector2(343, 140)

[node name="BaseCard2" parent="CanvasLayer" instance=ExtResource("2_frvsy")]
position = Vector2(132, 149)
card_level = 2
card_atk = 8
card_hp = 20
card_name = "BOSS"
card_description = "geil"

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 9.0
offset_right = 81.0
offset_bottom = 35.0
text = "Booster Box"

[node name="CardSpawnPoint" type="Node2D" parent="CanvasLayer"]
position = Vector2(529, 137)

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
